# agentic-trace-analyzer

./: .gitignore  404.html  Justfile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml
corpus/: bootstrap_eval.yaml  public_sources.yaml
docs/: failure-mode-taxonomy.md  hooks.py  index.md  research-synthesis.md  trace-corpus.md
elements/: index.html
elements/AgentCognitionOrchestration/: index.html
elements/AgentCompromiseInstructionHijack/: index.html
elements/Boolean/: index.html
elements/ChoiceOverloadPrematureCommitment/: index.html
elements/ConstraintOmissionPolicyNoncompliance/: index.html
elements/Curie/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/Double/: index.html
elements/FailureMode/: index.html
elements/Float/: index.html
elements/GoalIntentMismatch/: index.html
elements/HallucinationFabricatedEvidence/: index.html
elements/InsufficientPlanningLongHorizonBrittleness/: index.html
elements/Integer/: index.html
elements/Jsonpath/: index.html
elements/Jsonpointer/: index.html
elements/MemoryPoisoningPersistentInstructionCorruption/: index.html
elements/MultiAgentCoordinationBreakdown/: index.html
elements/Ncname/: index.html
elements/Nodeidentifier/: index.html
elements/Objectidentifier/: index.html
elements/ObservabilityProvenanceGaps/: index.html
elements/PerceptionContextMemory/: index.html
elements/PrematureTermination/: index.html
elements/PromptInjectionIndirectInstructionHijacking/: index.html
elements/ReasoningActionMismatch/: index.html
failure-mode-taxonomy/: index.html
reference/: index.html
research-synthesis/: index.html
search/: search_index.json
tests/: test_adjudicator.py  test_classifier.py  test_cli.py  test_corpus.py  test_parsers.py  test_schema.py
trace-corpus/: index.html
(+56 files in other folders)
